--- a/web/styles/main.css
+++ b/web/styles/main.css
@@ -5,7 +5,7 @@ body{ margin:0;
       background:white;
 }
 
-
+/*
 #instructions{
     float: right;
     text-decoration: none;
@@ -63,7 +63,7 @@ body{ margin:0;
 
 
 
-
+*/
 
 
 
